--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
+body,
+html {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  height: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root {
+  height: 100%;
+}
+
+main {
+  display: flex;
+  padding-top: 5em;
+  height: 100%;
+  justify-content: center;
+  overflow-x: hidden;
+}
+
+nav {
+  position: absolute;
+  width: 100%;
+}
+
+.navbar {
+  position: absolute;
 }
